<resources>
    <string name="app_name">Space Intruders</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="home_PlayButtonText">PLAY</string>
    <string name="home_ScoresButtonText">SCORES</string>
    <string name="home_SettingsButtonText">SETTINGS</string>
    <string name="home_ContentDescriptionText">The home screen of the application, featuring the title at the top, three navigation buttons, and a starry background</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="peer_connect">Connect</string>
    <string name="peer_discover">Discover Nearby Players</string>
    <string name="peer_discovery_start">Searching</string>
    <string name="peer_discovery_fail">Discovery Failed</string>
    <string name="peer_connected">Connected</string>
    <string name="peer_discovery_inactive">Inactive</string>
    <string name="peer_connection_fail">Connection failed</string>
    <string name="settingsTitle">Settings</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="username_label">Username</string>
    <string name="notifications_label">Reminder Notifications</string>
    <string name="save_settings_button_text">Save Colour</string>
    <string name="ship_preview">Ship Preview</string>
    <string name="connecting">Connecting</string>
    <string name="port">Port Number</string>
    <string name="exitTitle">Exit</string>
    <string name="exitText">Are you sure you want to disconnect?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unexpectedDisconnect">Your opponent disconnected.</string>
    <string name="rejected">Connection Rejected.</string>
    <string name="returnToMain">Main Menu</string>
    <string name="visit_player_name_string">Player2</string>
    <string name="visit_player_score_string">Score2</string>
    <string name="home_player_score_string">Score1</string>
    <string name="home_player_name_string">Player1</string>
    <string name="you">You</string>
    <string name="colour_change">Change Ship Colour</string>
    <string name="share_your_results">Share Your Results</string>
    <string name="logo_image_text">Logo Image</string>
    <string name="lives">LIVES: %s</string>
    <string name="victory_text">hard-won victory!</string>
    <string name="defeat_text">crushing defeat!</string>
    <string name="share_text_template">I just battled against %1$s in an intense match of Space Intruders! I experienced a %2$s</string>
    <string name="rules">Rules:</string>
    <string name="controls">Controls:</string>
    <string name="rules_text">The aim of the game is to get your missile to the bottom of you opponent’s screen. When a missile gets to the bottom of your screen you will lose a life. Each player has three lives, the first person to get the opponent down to zero wins.</string>
    <string name="controls_text">To move your ship, tilt the phone from side to side. To shoot across to your enemy, do a swipe up action. To intercept your opponents missiles, fire a bullet by clicking the screen.</string>
    <string name="info">How to play</string>
    <string name="share">SHARE</string>
    <string name="notification_title">The Galaxy Needs you!</string>
    <string name="notification_text">Why not play a friendly game of Space Intruders?</string>
    <string name="permission_issue">Location not permitted.</string>
    <string name="permission_justification">This operation requires the ability to modify system settings. Please grant this permission on the next screen.</string>
    <string name="okay">Okay</string>
    <string name="package_string">package:%s</string>
</resources>