<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <TextView
        android:id="@+id/home_player_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/home_player_name_string"
        app:layout_constraintBottom_toBottomOf="@+id/home_player_score_text"
        app:layout_constraintEnd_toStartOf="@+id/home_player_score_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_player_score_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/home_player_score_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_player_score_string"
        app:layout_constraintBottom_toBottomOf="@+id/visit_player_name_text"
        app:layout_constraintEnd_toStartOf="@+id/visit_player_score_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_player_name_text"
        app:layout_constraintTop_toTopOf="@+id/visit_player_name_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/visit_player_score_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/visit_player_score_string"
        app:layout_constraintBottom_toBottomOf="@+id/visit_player_name_text"
        app:layout_constraintEnd_toStartOf="@+id/visit_player_name_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_player_score_text"
        app:layout_constraintTop_toTopOf="@+id/visit_player_name_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/visit_player_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/visit_player_name_string"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scores_share_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/visit_player_score_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/scores_share_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="98dp"
        android:layout_height="0dp"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>